<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/darkgray"
        android:gravity="center_horizontal"
        android:paddingBottom="3dip"
        android:text="@string/title_contact"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/top_title_color" >

    </TextView>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_phone32" >
            </ImageView>

            <TextView
                android:id="@+id/tvShopNameEng"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact_phone"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/contact_text_color" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_email32" >
            </ImageView>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact_email"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/contact_text_color" >

            </TextView>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_world32" >
            </ImageView>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact_address"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/contact_text_color" >

            </TextView>
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/btnDial"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_dial_text" >
    </Button>

    <Button
        android:id="@+id/btnEmail"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_email_text" >
    </Button>

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/shop_photo" >
    </ImageView>

</LinearLayout>